--- a/style.css
+++ b/style.css
@@ -14,4 +14,15 @@ body {
 	padding: 10px;
 	border-bottom: 1px solid black;
 }
+.section{
+	text-align: center;
+	width:75%;
+	margin: 10px auto 10px auto;
+}
+
+li {
+	list-style-type: none;
+	padding: 10px;
+	font-size: large;
+}
 
